# apple-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
apple_mcp/: __init__.py  __main__.py  contracts.py  runtime.py  server.py
apple_mcp/adapters/: __init__.py  calendar.py  contacts.py  files.py  maps.py  messages.py  music.py  notes.py  reminders.py  safari.py  shortcuts.py
docs/: parity-checklist.md  projection-contract.md
docs/superpowers/plans/: 2026-06-23-apple-mcp-v1.md  2026-06-28-notes-surface.md  2026-06-29-mac-mcp-rebrand-release.md
docs/superpowers/specs/: 2026-06-23-apple-mcp-v1-design.md  2026-06-28-notes-surface-design.md  2026-06-29-mac-mcp-rebrand-release-design.md
mac_mcp/: __init__.py  __main__.py  runtime.py  server.py
mac_mcp/adapters/: __init__.py  calendar.py  contacts.py  mail.py  messages.py  photos.py  shortcuts.py
tests/: test_calendar.py  test_contacts.py  test_contracts.py  test_files.py  test_integration.py  test_mail.py  test_maps.py  test_messages.py  test_music.py  test_notes.py  test_photos.py  test_reminders.py  test_runtime.py  test_safari.py  test_server.py  test_shortcuts.py
